Java/Compiler_Assignments/assignment4/src/parser/parser.java
/* Generated By:JavaCC: Do not edit this line. parser.java */
package parser;
public class parser implements parserConstants {

  static final public void Goal() throws ParseException {
    MainClass();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CLASS:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      ClassDeclaration();
    }
    jj_consume_token(0);
  }

  static final public void MainClass() throws ParseException {
    jj_consume_token(CLASS);
    jj_consume_token(IDENTIFIER);
    jj_consume_token(L_BRACE);
    jj_consume_token(PUBLIC);
    jj_consume_token(STATIC);
    jj_consume_token(VOID);
    jj_consume_token(MAIN);
    jj_consume_token(L_PAREN);
    jj_consume_token(STRING);
    jj_consume_token(L_BRACKET);
    jj_consume_token(R_BRACKET);
    jj_consume_token(IDENTIFIER);
    jj_consume_token(R_PAREN);
    jj_consume_token(L_BRACE);
    Statement();
    jj_consume_token(R_BRACE);
    jj_consume_token(R_BRACE);
  }

  static final public void ClassDeclaration() throws ParseException {
    if (jj_2_1(3)) {
      SimpleClass();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CLASS:
        ExtendsClass();
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void SimpleClass() throws ParseException {
    jj_consume_token(CLASS);
    jj_consume_token(IDENTIFIER);
    jj_consume_token(L_BRACE);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
      case BOOLEAN:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      VarDeclaration();
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PUBLIC:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_3;
      }
      MethodDeclaration();
    }
    jj_consume_token(R_BRACE);
  }

  static final public void ExtendsClass() throws ParseException {
    jj_consume_token(CLASS);
    jj_consume_token(IDENTIFIER);
    jj_consume_token(EXTENDS);
    jj_consume_token(IDENTIFIER);
    jj_consume_token(L_BRACE);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
      case BOOLEAN:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_4;
      }
      VarDeclaration();
    }
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PUBLIC:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_5;
      }
      MethodDeclaration();
    }
    jj_consume_token(R_BRACE);
  }

  static final public void VarDeclaration() throws ParseException {
    Type();
    jj_consume_token(IDENTIFIER);
    jj_consume_token(SEMICOLON);
  }

  static final public void MethodDeclaration() throws ParseException {
    jj_consume_token(PUBLIC);
    Type();
    jj_consume_token(IDENTIFIER);
    jj_consume_token(L_PAREN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
    case BOOLEAN:
    case IDENTIFIER:
      FormalParameterList();
      break;
    default:
      jj_la1[6] = jj_gen;
      ;
    }
    jj_consume_token(R_PAREN);
    jj_consume_token(L_BRACE);
    label_6:
    while (true) {
      if (jj_2_2(2)) {
        ;
      } else {
        break label_6;
      }
      VarDeclaration();
    }
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case L_BRACE:
      case IF:
      case WHILE:
      case PRINT:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_7;
      }
      Statement();
    }
    jj_consume_token(RETURN);
    Expression();
    jj_consume_token(SEMICOLON);
    jj_consume_token(R_BRACE);
  }

  static final public void FormalParameterList() throws ParseException {
    FormalParameter();
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_8;
      }
      FormalParameterRest();
    }
  }

  static final public void FormalParameter() throws ParseException {
    Type();
    jj_consume_token(IDENTIFIER);
  }

  static final public void FormalParameterRest() throws ParseException {
    jj_consume_token(COMMA);
    FormalParameter();
  }

  static final public void Type() throws ParseException {
    if (jj_2_3(3)) {
      ArrayType();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOLEAN:
        BooleanType();
        break;
      case INT:
        IntType();
        break;
      case IDENTIFIER:
        IdentifierType();
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void ArrayType() throws ParseException {
    jj_consume_token(INT);
    jj_consume_token(L_BRACKET);
    jj_consume_token(R_BRACKET);
  }

  static final public void BooleanType() throws ParseException {
    jj_consume_token(BOOLEAN);
  }

  static final public void IntType() throws ParseException {
    jj_consume_token(INT);
  }

  static final public void IdentifierType() throws ParseException {
    jj_consume_token(IDENTIFIER);
  }

  static final public void Statement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case L_BRACE:
      BlockStatements();
      break;
    default:
      jj_la1[10] = jj_gen;
      if (jj_2_4(2)) {
        AssignmentStatement();
      } else if (jj_2_5(2)) {
        ArrayAssignment();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IF:
          IfStatement();
          break;
        case WHILE:
          WhileStatement();
          break;
        case PRINT:
          PrintStatement();
          break;
        default:
          jj_la1[11] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
  }

  static final public void BlockStatements() throws ParseException {
    jj_consume_token(L_BRACE);
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case L_BRACE:
      case IF:
      case WHILE:
      case PRINT:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_9;
      }
      Statement();
    }
    jj_consume_token(R_BRACE);
  }

  static final public void IfStatement() throws ParseException {
    jj_consume_token(IF);
    jj_consume_token(L_PAREN);
    Expression();
    jj_consume_token(R_PAREN);
    Statement();
    jj_consume_token(ELSE);
    Statement();
  }

  static final public void WhileStatement() throws ParseException {
    jj_consume_token(WHILE);
    jj_consume_token(L_PAREN);
    Expression();
    jj_consume_token(R_PAREN);
    Statement();
  }

  static final public void PrintStatement() throws ParseException {
    jj_consume_token(PRINT);
    jj_consume_token(L_PAREN);
    Expression();
    jj_consume_token(R_PAREN);
    jj_consume_token(SEMICOLON);
  }

  static final public void AssignmentStatement() throws ParseException {
    jj_consume_token(IDENTIFIER);
    jj_consume_token(EQUALS);
    Expression();
    jj_consume_token(SEMICOLON);
  }

  static final public void ArrayAssignment() throws ParseException {
    jj_consume_token(IDENTIFIER);
    jj_consume_token(L_BRACKET);
    Expression();
    jj_consume_token(R_BRACKET);
    jj_consume_token(EQUALS);
    Expression();
    jj_consume_token(SEMICOLON);
  }

  static final public void Expression() throws ParseException {
    if (jj_2_6(2147483647)) {
      And();
    } else if (jj_2_7(2147483647)) {
      LessThan();
    } else if (jj_2_8(2147483647)) {
      Plus();
    } else if (jj_2_9(2147483647)) {
      Minus();
    } else if (jj_2_10(2147483647)) {
      Multiplication();
    } else if (jj_2_11(2147483647)) {
      ArrayLookup();
    } else if (jj_2_12(2147483647)) {
      ArrayLength();
    } else if (jj_2_13(2147483647)) {
      MethodCall();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case L_PAREN:
      case NOT:
      case NEW:
      case TRUE:
      case THIS:
      case FALSE:
      case IDENTIFIER:
      case INTEGER_LIT:
        PrimaryExpression();
        break;
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void And() throws ParseException {
    PrimaryExpression();
    jj_consume_token(AND);
    PrimaryExpression();
  }

  static final public void LessThan() throws ParseException {
    PrimaryExpression();
    jj_consume_token(LT);
    PrimaryExpression();
  }

  static final public void Plus() throws ParseException {
    PrimaryExpression();
    jj_consume_token(PLUS);
    PrimaryExpression();
  }

  static final public void Minus() throws ParseException {
    PrimaryExpression();
    jj_consume_token(MINUS);
    PrimaryExpression();
  }

  static final public void Multiplication() throws ParseException {
    PrimaryExpression();
    jj_consume_token(MULTIPLY);
    PrimaryExpression();
  }

  static final public void ArrayLookup() throws ParseException {
    PrimaryExpression();
    jj_consume_token(L_BRACKET);
    PrimaryExpression();
    jj_consume_token(R_BRACKET);
  }

  static final public void ArrayLength() throws ParseException {
    PrimaryExpression();
    jj_consume_token(PERIOD);
    jj_consume_token(LENGTH);
  }

  static final public void MethodCall() throws ParseException {
    PrimaryExpression();
    jj_consume_token(PERIOD);
    jj_consume_token(IDENTIFIER);
    jj_consume_token(L_PAREN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case L_PAREN:
    case NOT:
    case NEW:
    case TRUE:
    case THIS:
    case FALSE:
    case IDENTIFIER:
    case INTEGER_LIT:
      ExpressionList();
      break;
    default:
      jj_la1[14] = jj_gen;
      ;
    }
    jj_consume_token(R_PAREN);
  }

  static final public void PrimaryExpression() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_LIT:
      IntegerLiteral();
      break;
    case TRUE:
      True();
      break;
    case FALSE:
      False();
      break;
    case IDENTIFIER:
      IdentifierExpression();
      break;
    case THIS:
      This();
      break;
    default:
      jj_la1[15] = jj_gen;
      if (jj_2_14(2)) {
        NewArray();
      } else if (jj_2_15(2)) {
        NewObject();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NOT:
          Not();
          break;
        case L_PAREN:
          BracketExpression();
          break;
        default:
          jj_la1[16] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
  }

  static final public void IntegerLiteral() throws ParseException {
    jj_consume_token(INTEGER_LIT);
  }

  static final public void True() throws ParseException {
    jj_consume_token(TRUE);
  }

  static final public void False() throws ParseException {
    jj_consume_token(FALSE);
  }

  static final public void IdentifierExpression() throws ParseException {
    jj_consume_token(IDENTIFIER);
  }

  static final public void This() throws ParseException {
    jj_consume_token(THIS);
  }

  static final public void NewArray() throws ParseException {
    jj_consume_token(NEW);
    jj_consume_token(INT);
    jj_consume_token(L_BRACKET);
    Expression();
    jj_consume_token(R_BRACKET);
  }

  static final public void NewObject() throws ParseException {
    jj_consume_token(NEW);
    jj_consume_token(IDENTIFIER);
    jj_consume_token(L_PAREN);
    jj_consume_token(R_PAREN);
  }

  static final public void Not() throws ParseException {
    jj_consume_token(NOT);
    Expression();
  }

  static final public void BracketExpression() throws ParseException {
    jj_consume_token(L_PAREN);
    Expression();
    jj_consume_token(R_PAREN);
  }

  static final public void ExpressionList() throws ParseException {
    Expression();
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[17] = jj_gen;
        break label_10;
      }
      ExpressionRest();
    }
  }

  static final public void ExpressionRest() throws ParseException {
    jj_consume_token(COMMA);
    Expression();
  }

  static final private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static final private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static final private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static final private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static final private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static final private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static final private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  static final private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  static final private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  static final private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  static final private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  static final private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  static final private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  static final private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  static final private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  static final private boolean jj_3R_45() {
    if (jj_scan_token(COMMA)) return true;
    if (jj_3R_24()) return true;
    return false;
  }

  static final private boolean jj_3R_42() {
    if (jj_3R_43()) return true;
    return false;
  }

  static final private boolean jj_3R_13() {
    if (jj_scan_token(INT)) return true;
    if (jj_scan_token(L_BRACKET)) return true;
    if (jj_scan_token(R_BRACKET)) return true;
    return false;
  }

  static final private boolean jj_3R_43() {
    if (jj_3R_24()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_44()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static final private boolean jj_3R_41() {
    if (jj_3R_16()) return true;
    if (jj_scan_token(PERIOD)) return true;
    if (jj_scan_token(IDENTIFIER)) return true;
    if (jj_scan_token(L_PAREN)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_42()) jj_scanpos = xsp;
    if (jj_scan_token(R_PAREN)) return true;
    return false;
  }

  static final private boolean jj_3R_15() {
    if (jj_scan_token(IDENTIFIER)) return true;
    if (jj_scan_token(L_BRACKET)) return true;
    return false;
  }

  static final private boolean jj_3_3() {
    if (jj_3R_13()) return true;
    return false;
  }

  static final private boolean jj_3R_19() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_3()) {
    jj_scanpos = xsp;
    if (jj_scan_token(45)) {
    jj_scanpos = xsp;
    if (jj_scan_token(30)) {
    jj_scanpos = xsp;
    if (jj_scan_token(47)) return true;
    }
    }
    }
    return false;
  }

  static final private boolean jj_3R_40() {
    if (jj_3R_16()) return true;
    if (jj_scan_token(PERIOD)) return true;
    if (jj_scan_token(LENGTH)) return true;
    return false;
  }

  static final private boolean jj_3R_23() {
    if (jj_scan_token(L_PAREN)) return true;
    if (jj_3R_24()) return true;
    if (jj_scan_token(R_PAREN)) return true;
    return false;
  }

  static final private boolean jj_3R_14() {
    if (jj_scan_token(IDENTIFIER)) return true;
    if (jj_scan_token(EQUALS)) return true;
    return false;
  }

  static final private boolean jj_3R_22() {
    if (jj_scan_token(NOT)) return true;
    if (jj_3R_24()) return true;
    return false;
  }

  static final private boolean jj_3R_39() {
    if (jj_3R_16()) return true;
    if (jj_scan_token(L_BRACKET)) return true;
    if (jj_3R_16()) return true;
    if (jj_scan_token(R_BRACKET)) return true;
    return false;
  }

  static final private boolean jj_3R_18() {
    if (jj_scan_token(NEW)) return true;
    if (jj_scan_token(IDENTIFIER)) return true;
    if (jj_scan_token(L_PAREN)) return true;
    if (jj_scan_token(R_PAREN)) return true;
    return false;
  }

  static final private boolean jj_3R_38() {
    if (jj_3R_16()) return true;
    if (jj_scan_token(MULTIPLY)) return true;
    if (jj_3R_16()) return true;
    return false;
  }

  static final private boolean jj_3R_17() {
    if (jj_scan_token(NEW)) return true;
    if (jj_scan_token(INT)) return true;
    if (jj_scan_token(L_BRACKET)) return true;
    if (jj_3R_24()) return true;
    if (jj_scan_token(R_BRACKET)) return true;
    return false;
  }

  static final private boolean jj_3R_37() {
    if (jj_3R_16()) return true;
    if (jj_scan_token(MINUS)) return true;
    if (jj_3R_16()) return true;
    return false;
  }

  static final private boolean jj_3_2() {
    if (jj_3R_12()) return true;
    return false;
  }

  static final private boolean jj_3R_36() {
    if (jj_3R_16()) return true;
    if (jj_scan_token(PLUS)) return true;
    if (jj_3R_16()) return true;
    return false;
  }

  static final private boolean jj_3R_35() {
    if (jj_3R_16()) return true;
    if (jj_scan_token(LT)) return true;
    if (jj_3R_16()) return true;
    return false;
  }

  static final private boolean jj_3R_12() {
    if (jj_3R_19()) return true;
    if (jj_scan_token(IDENTIFIER)) return true;
    return false;
  }

  static final private boolean jj_3_13() {
    if (jj_3R_16()) return true;
    if (jj_scan_token(PERIOD)) return true;
    if (jj_scan_token(IDENTIFIER)) return true;
    return false;
  }

  static final private boolean jj_3_12() {
    if (jj_3R_16()) return true;
    if (jj_scan_token(PERIOD)) return true;
    if (jj_scan_token(LENGTH)) return true;
    return false;
  }

  static final private boolean jj_3R_34() {
    if (jj_3R_16()) return true;
    if (jj_scan_token(AND)) return true;
    if (jj_3R_16()) return true;
    return false;
  }

  static final private boolean jj_3_5() {
    if (jj_3R_15()) return true;
    return false;
  }

  static final private boolean jj_3_11() {
    if (jj_3R_16()) return true;
    if (jj_scan_token(L_BRACKET)) return true;
    return false;
  }

  static final private boolean jj_3R_33() {
    if (jj_3R_16()) return true;
    return false;
  }

  static final private boolean jj_3_4() {
    if (jj_3R_14()) return true;
    return false;
  }

  static final private boolean jj_3_10() {
    if (jj_3R_16()) return true;
    if (jj_scan_token(MULTIPLY)) return true;
    return false;
  }

  static final private boolean jj_3R_32() {
    if (jj_3R_41()) return true;
    return false;
  }

  static final private boolean jj_3_9() {
    if (jj_3R_16()) return true;
    if (jj_scan_token(MINUS)) return true;
    return false;
  }

  static final private boolean jj_3R_21() {
    if (jj_3R_23()) return true;
    return false;
  }

  static final private boolean jj_3R_31() {
    if (jj_3R_40()) return true;
    return false;
  }

  static final private boolean jj_3R_20() {
    if (jj_3R_22()) return true;
    return false;
  }

  static final private boolean jj_3_8() {
    if (jj_3R_16()) return true;
    if (jj_scan_token(PLUS)) return true;
    return false;
  }

  static final private boolean jj_3R_30() {
    if (jj_3R_39()) return true;
    return false;
  }

  static final private boolean jj_3_15() {
    if (jj_3R_18()) return true;
    return false;
  }

  static final private boolean jj_3_7() {
    if (jj_3R_16()) return true;
    if (jj_scan_token(LT)) return true;
    return false;
  }

  static final private boolean jj_3R_29() {
    if (jj_3R_38()) return true;
    return false;
  }

  static final private boolean jj_3_14() {
    if (jj_3R_17()) return true;
    return false;
  }

  static final private boolean jj_3_6() {
    if (jj_3R_16()) return true;
    if (jj_scan_token(AND)) return true;
    return false;
  }

  static final private boolean jj_3R_11() {
    if (jj_scan_token(CLASS)) return true;
    if (jj_scan_token(IDENTIFIER)) return true;
    if (jj_scan_token(L_BRACE)) return true;
    return false;
  }

  static final private boolean jj_3R_28() {
    if (jj_3R_37()) return true;
    return false;
  }

  static final private boolean jj_3R_27() {
    if (jj_3R_36()) return true;
    return false;
  }

  static final private boolean jj_3R_44() {
    if (jj_3R_45()) return true;
    return false;
  }

  static final private boolean jj_3_1() {
    if (jj_3R_11()) return true;
    return false;
  }

  static final private boolean jj_3R_26() {
    if (jj_3R_35()) return true;
    return false;
  }

  static final private boolean jj_3R_16() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(48)) {
    jj_scanpos = xsp;
    if (jj_scan_token(34)) {
    jj_scanpos = xsp;
    if (jj_scan_token(38)) {
    jj_scanpos = xsp;
    if (jj_scan_token(47)) {
    jj_scanpos = xsp;
    if (jj_scan_token(35)) {
    jj_scanpos = xsp;
    if (jj_3_14()) {
    jj_scanpos = xsp;
    if (jj_3_15()) {
    jj_scanpos = xsp;
    if (jj_3R_20()) {
    jj_scanpos = xsp;
    if (jj_3R_21()) return true;
    }
    }
    }
    }
    }
    }
    }
    }
    return false;
  }

  static final private boolean jj_3R_24() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_25()) {
    jj_scanpos = xsp;
    if (jj_3R_26()) {
    jj_scanpos = xsp;
    if (jj_3R_27()) {
    jj_scanpos = xsp;
    if (jj_3R_28()) {
    jj_scanpos = xsp;
    if (jj_3R_29()) {
    jj_scanpos = xsp;
    if (jj_3R_30()) {
    jj_scanpos = xsp;
    if (jj_3R_31()) {
    jj_scanpos = xsp;
    if (jj_3R_32()) {
    jj_scanpos = xsp;
    if (jj_3R_33()) return true;
    }
    }
    }
    }
    }
    }
    }
    }
    return false;
  }

  static final private boolean jj_3R_25() {
    if (jj_3R_34()) return true;
    return false;
  }

